# use-logger

./: README.md  pyproject.toml
.github/workflows/: release.yml
example/: demo.py  logger_demo.py  uvicorn_logstash.py
src/use_logger/: __init__.py  formatters.py  handlers.py  intercept.py  logger.py
src/usepy_plugin_logger/: formatters.py
tests/: test_formatter.py
