[tool.poetry]
name = "usepy-plugin-logger"
version = "0.1.6"
description = "一个全局拦截日志并转为loguru日志的插件"
authors = ["nowanti <believel.y@qq.com>"]
readme = "README.md"
packages = [
    { include = 'usepy_plugin_logger', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"


[tool.poetry.group.test.dependencies]
pytest = [
    { version = "^7.0.0", python = ">=3.6,<3.7" },
    { version = "^7.3.1", python = ">=3.7" }
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
