[tool.poetry]
name = "use-logger"
version = "0.1.7"
description = "一个全局拦截日志并转为loguru日志的插件"
authors = ["nowanti <believel.y@qq.com>"]
readme = "README.md"
packages = [
    { include = 'use_logger', from = 'src' }
]

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.6.0"


[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pre-commit-hooks = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
